# lingualayer-contract

./: Cargo.toml
.github/workflows/: ci.yml
data-commission/: Cargo.toml
data-commission/src/: lib.rs
dataset-registry/: Cargo.toml
dataset-registry/src/: lib.rs
deployment/: testnet.json
license-router/: Cargo.toml
license-router/src/: lib.rs
quality-oracle/: Cargo.toml
quality-oracle/src/: lib.rs
royalty-splitter/: Cargo.toml
royalty-splitter/src/: lib.rs
