[package]
name = "dataset-registry"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

// improvement #10

// improvement #13

// improvement #18

// improvement #19

// improvement #25

// improvement #27

// improvement #33
